--- a/Radiolysis_simulations.ipynb
+++ b/Radiolysis_simulations.ipynb
@@ -5,7 +5,7 @@
    "id": "781f4c49",
    "metadata": {},
    "source": [
-    "# Radiolysis simultions\n",
+    "# Radiolysis simulations\n",
     "\n",
     "Making figures for my thesis - radiolysis simulations of H2O and H2O-NaCl. \n",
     "\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac3df44d",
+   "id": "ff0255b2",
    "metadata": {},
    "source": [
     "## Define functions \n",
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "993bdf8e",
+   "id": "a47e8847",
    "metadata": {},
    "source": [
     "## Change directory to one containing parameter files\n",
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41db8504",
+   "id": "f1a304e9",
    "metadata": {},
    "source": [
     "## Redefine execute_sims \n",
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "116f9ed7",
+   "id": "4def51ae",
    "metadata": {},
    "source": [
     "## Define settings \n",
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ace3aac",
+   "id": "f59955be",
    "metadata": {},
    "source": [
     "## Execute simulations\n",
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "48b656cc",
+   "id": "d648fc7a",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0ab40d97",
+   "id": "efd46f53",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d9ec562",
+   "id": "6ea15042",
    "metadata": {},
    "source": [
     "## Change plotting parameters\n",
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e1c18fa",
+   "id": "a9a7641e",
    "metadata": {},
    "source": [
     "Defining my colour-scheme: "
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06f4ee02",
+   "id": "11c4669b",
    "metadata": {},
    "source": [
     "Adding some plot parameters: "
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b2828e89",
+   "id": "5b29c5c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bffae220",
+   "id": "56ea06cc",
    "metadata": {},
    "source": [
     "## Plot H2O figure:"
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98c704a7",
+   "id": "09b90c2e",
    "metadata": {},
    "source": [
     "### Plot NaCl Figure: \n",
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24375d43",
+   "id": "2072c926",
    "metadata": {},
    "source": [
     "## Plotting concentrations vs flux for some common reactant\n",
